--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,12 @@ dependencies:
   cloud_firestore: ^0.12.9+4
   provider: ^3.1.0
   flutter_spinkit: ^4.0.0
-  google_sign_in: ^4.5.1
-  flutter_facebook_login: ^3.0.0
   flushbar: ^1.10.4
+  flutter_sound: ^4.0.0
+  audio_recorder: ^1.0.2
+  permission_handler: ^5.0.1+1
+  audioplayers: ^0.16.0
+  firebase_storage: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +44,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -52,13 +54,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -78,3 +77,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
