--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   permission_handler: ^5.0.1+1
   audioplayers: ^0.16.0
   firebase_storage: ^3.0.0
+  progress_dialog: ^1.2.4
 
 dev_dependencies:
   flutter_test:
