--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   audioplayers: ^0.16.0
   firebase_storage: ^3.0.0
   progress_dialog: ^1.2.4
+  assets_audio_player: ^2.0.9+2
 
 dev_dependencies:
   flutter_test:
